Fix display issues on IE11
Open TTM campaign with IE11.

* The application should be displayed
* The status buttons (failed/passed/…) should not be shrinked
* The comment preview zone (where there is the [view details] button
should not be shrinked. (issue tricky to reproduce, depends on the viewport
size and the test content)

Part of story #14735: include images in test execution comment box

--- a/plugins/testmanagement/themes/BurningParrot/css/includes/_current-execution.scss
+++ b/plugins/testmanagement/themes/BurningParrot/css/includes/_current-execution.scss
@@ -138,6 +138,7 @@
 
 .current-test-latest-result {
     display: flex;
+    flex: 0 0 auto;
     background-blend-mode: overlay, normal;
     mix-blend-mode: normal;
     color: $tlp-ui-white;
@@ -195,7 +196,8 @@ execution-with-steps.current-test-content {
 }
 
 .current-test-comment {
-    width: 100%;
+    // 240px = width of 4 buttons and their margin)
+    width: calc(100% - 240px);
     min-height: 50px;
     max-height: 200px;
     padding: 8px 12px;
@@ -233,6 +235,7 @@ execution-with-steps.current-test-content {
 }
 
 .current-test-result {
+    flex: 0 0 auto;
     width: 50px;
     height: 50px;
     margin: 0 0 0 $tlp-half-spacing;
